force-app/main/default/objects/ServiceResource/fields/Debut_d_autorisation_d_astreinte__c.field-meta.xml
<CustomField>
    <fullName>Debut_d_autorisation_d_astreinte__c</fullName>
    <description>il s&apos;agit début de l&apos;autorisation temporaire accordé aux utilisateurs durant leurs périodes d&apos;astreinte.</description>
    <label>Debut d&apos;autorisation d&apos;astreinte</label>
    <type>DateTime</type>
</CustomField>