force-app/main/default/objects/ServiceResource/fields/Fin_d_autorisation_d_astreinte__c.field-meta.xml
<CustomField>
    <fullName>Fin_d_autorisation_d_astreinte__c</fullName>
    <description>il s&apos;agit de la fin de l&apos;autorisation temporaire accordé aux utilisateurs durant leurs périodes d&apos;astreinte.</description>
    <label>Fin d&apos;autorisation d&apos;astreinte</label>
    <type>DateTime</type>
</CustomField>