force-app/main/default/objects/ServiceResource/fields/SR_Type_de_contrat__c.field-meta.xml
<CustomField>
    <fullName>SR_Type_de_contrat__c</fullName>
    <label>Type de contrat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salarié</fullName>
            </value>
            <value>
                <fullName>Intérimaire</fullName>
            </value>
            <value>
                <fullName>Sous-traitant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>