force-app/main/default/objects/ServiceResource/fields/USER_TECH_Feuille_de_temps__c.field-meta.xml
<CustomField>
    <fullName>USER_TECH_Feuille_de_temps__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ne pas supprimer ce champ technique.</description>
    <label>TECH_Feuille de temps</label>
    <referenceTo>TimeSheet</referenceTo>
    <relationshipLabel>Ressources de service</relationshipLabel>
    <relationshipName>Ressources_de_service</relationshipName>
    <type>Lookup</type>
</CustomField>