force-app/main/default/objects/ServiceResource/listViews/All_ServiceResources.listView-meta.xml
<ListView>
    <fullName>All_ServiceResources</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>ResourceType</columns>
    <columns>SR_Type_de_contrat__c</columns>
    <columns>IsActive</columns>
    <columns>IsOptimizationCapable</columns>
    <columns>IsCapacityBased</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les ressources de service</label>
</ListView>